--- a/final_project/templates/index.html
+++ b/final_project/templates/index.html
@@ -13,7 +13,7 @@
             <button onclick="translateToEnglish()" class="btn btn-secondary">Translate to English</button>        
         </div>
     
-        <div id="translated_text" style="padding: 25px 25px 25px 25px;">{{translated_text}</div>
+        <div id="translated_text" style="padding: 25px 25px 25px 25px;"></div>
         </div>
   </div>
 </html>
